# switchbot

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile
.cargo/: config
docker/: ubuntu-ports.sh
src/: lib.rs  main.rs
